--- a/index.html
+++ b/index.html
@@ -4,26 +4,28 @@
     <link rel="stylesheet" href="styles.css" type="text/css">
     <title>Interpol NYC</title>
   <body>
-<img src="images/logo.png" alt="Interpol" class="logo">
-<br>
-<br>
-<img src="images/headshots2.jpg" alt="Headshots" class="headshots">
-<div class="footer">
-  <ul>
-    <strong><li>Festival Vivo x El Rock 2019</li>
-    <li>Corona Capital 2019</li>
-    <li>Voodoo Music & Arts Experience 2019</li>
-    <li>Osheaga Music & Arts 2019</li></strong>
-  </ul>
-</div>
-<div class="links">
-  <ul>
-    <strong><li><a href="#">Merch</a></li>
-    <li><a href="#">Buy Our New Album</a></li>
-    <li><a href="#">Past Tours</a></li>
-    <li><a href="#">Sign Up For Our Newsletter</a></li></strong>
-  </ul>
-</div>
-  </body>
+    <div class="sidenav">
+      <img src="images/sparkle.gif" alt="sparkle" class="gif1">
+      <img src="images/logo.png" alt="Interpol" class="logo">
+      <img src="images/sparkle.gif" alt="sparkle" class="gif">
+      <div class="tours">
+        <ul>
+          <li>Festival Vivo x El Rock 2019</li>
+          <li>Corona Capital 2019</li>
+          <li>Voodoo Music & Arts Experience 2019</li>
+          <li>Osheaga Music & Arts 2019</li>
+        </ul>
+      </div>
+    </div>
+    <img src="images/headshots2.jpg" alt="Headshots" class="headshots">
+    <div class="links">
+      <ul>
+        <strong><li><a href="#">Merch</a></li>
+        <li><a href="#">Buy Our New Album</a></li>
+        <li><a href="#">Past Tours</a></li>
+        <li><a href="#">Sign Up For Our Newsletter</a></li></strong>
+      </ul>
+    </div>
+      </body>
   </head>
 </html>
