update borders on index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <img src="images/headshots2.jpg" alt="Headshots" class="headshots">
-    <div class="links">
+    <div class="link-box">
       <ul>
         <strong><li><a href="#">Merch</a></li>
         <li><a href="#">Buy Our New Album</a></li>
