fix link sources

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Interpol NYC</title>
   <body>
     <div class="sidenav">
-      <img src="images/sparkle.gif" alt="sparkle" class="gif1">
-      <img src="images/logo.png" alt="Interpol" class="logo">
-      <img src="images/sparkle.gif" alt="sparkle" class="gif">
+      <img src="./images/sparkle.gif" alt="sparkle" class="gif1">
+      <img src="./images/logo.png" alt="Interpol" class="logo">
+      <img src="./images/sparkle.gif" alt="sparkle" class="gif">
       <div class="tours">
         <ul>
           <li>Festival Vivo x El Rock 2019</li>
@@ -17,7 +17,7 @@
         </ul>
       </div>
     </div>
-    <img src="images/headshots2.jpg" alt="Headshots" class="headshots">
+    <img src="./images/headshots2.jpg" alt="Headshots" class="headshots">
     <div class="link-box">
       <ul>
         <strong><li><a href="#">Merch</a></li>
